buttons/request form update - cant fix that the writing is not visible on the button?

--- a/src/components/Info/Info.css
+++ b/src/components/Info/Info.css
@@ -48,4 +48,11 @@
 .infoBoxButton {
   border-radius: 8%;
   font-size: 20px;
+  color: white;
+  z-index: 1;
+}
+
+.receiverRequestButtons {
+  display: flex;
+  justify-content: space-around;
 }
